# Finetuning_GPT_2

./: .gitignore  README.md  pyproject.toml
data/dataset_splits/LMentry_split/: bigger_number_test.json  bigger_number_train.json  first_alphabetically_consecutive_first_letter_test.json  first_alphabetically_consecutive_first_letter_train.json  first_alphabetically_different_first_letter_test.json  first_alphabetically_different_first_letter_train.json  first_alphabetically_far_first_letter_test.json  first_alphabetically_far_first_letter_train.json  first_alphabetically_same_first_letter_test.json  first_alphabetically_same_first_letter_train.json  first_alphabetically_test.json  first_alphabetically_train.json  first_letter_test.json  first_letter_train.json  first_word_test.json  first_word_train.json  last_letter_test.json  last_letter_train.json  last_word_test.json  last_word_train.json  least_associated_word_test.json  least_associated_word_train.json  less_letters_length_diff_1_test.json  less_letters_length_diff_1_train.json  less_letters_length_diff_3plus_test.json  less_letters_length_diff_3plus_train.json  less_letters_test.json  less_letters_train.json  more_letters_length_diff_1_test.json  more_letters_length_diff_1_train.json  more_letters_length_diff_3plus_test.json  more_letters_length_diff_3plus_train.json  more_letters_test.json  more_letters_train.json  most_associated_word_test.json  most_associated_word_train.json  (+12 more)
data/results/: outlines_data_results.csv
pjs/: corpus_construction.py  data.ipynb  data_paths.py  dataset.py  eval.py  german_corpus_data.py  main.py  model_char_lvl.py  model_token_lvl.py  results.ipynb  test.py  train.py
(+257 files in other folders)
